tests/run/error_scope_exit.out
tests/run/error_scope_exit.em:6:12: error: undefined variable
